FmComms_Lan/fmcomms1_zed.sdk/.metadata/.plugins/org.eclipse.cdt.ui/fmcomms_lan.build.log
09:42:42 **** Auto Build of configuration Debug for project fmcomms_lan ****
make all 
'Building file: ../src/Common/main.c'
'Invoking: ARM gcc compiler'
arm-xilinx-eabi-gcc -Wall -O0 -g3 -I"E:\ZedBoard_Projects\FmComms_Lan\fmcomms1_zed.sdk\fmcomms_lan\src\AD8366" -I"E:\ZedBoard_Projects\FmComms_Lan\fmcomms1_zed.sdk\fmcomms_lan\src\AD9122" -I"E:\ZedBoard_Projects\FmComms_Lan\fmcomms1_zed.sdk\fmcomms_lan\src\AD9523" -I"E:\ZedBoard_Projects\FmComms_Lan\fmcomms1_zed.sdk\fmcomms_lan\src\AD9548" -I"E:\ZedBoard_Projects\FmComms_Lan\fmcomms1_zed.sdk\fmcomms_lan\src\AD9643" -I"E:\ZedBoard_Projects\FmComms_Lan\fmcomms1_zed.sdk\fmcomms_lan\src\ADF4351" -I"E:\ZedBoard_Projects\FmComms_Lan\fmcomms1_zed.sdk\fmcomms_lan\src\Common" -c -fmessage-length=0 -MT"src/Common/main.o" -I../../fmcomms_lan_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/Common/main.d" -MT"src/Common/main.d" -o "src/Common/main.o" "../src/Common/main.c"
../src/Common/main.c: In function 'send_data_ethernet':
../src/Common/main.c:86:11: warning: pointer targets in passing argument 1 of 'sprintf' differ in signedness [-Wpointer-sign]
   sprintf(sending_data, "%u,%u\n", s_i[i], s_q[i]);
           ^
In file included from d:\xilinx\sdk\2015.4\gnu\arm\nt\arm-xilinx-eabi\include\stdio.h:29:0,
                 from ../src/Common/main.c:47:
d:\xilinx\sdk\2015.4\gnu\arm\nt\arm-xilinx-eabi\include\stdio.h:257:5: note: expected 'char *' but argument is of type 'unsigned char *'
 int _EXFUN(sprintf, (char *__restrict, const char *__restrict, ...)
     ^
../src/Common/main.c: In function 'main':
../src/Common/main.c:232:28: warning: passing argument 1 of 'send_data_ethernet' discards 'volatile' qualifier from pointer target type
         send_data_ethernet(rtcp, signal_i, signal_q);
                            ^
../src/Common/main.c:79:6: note: expected 'struct tcp_pcb *' but argument is of type 'volatile struct tcp_pcb *'
 void send_data_ethernet(struct tcp_pcb *pcb, uint16_t s_i[], uint16_t s_q[])
      ^
../src/Common/main.c:201:19: warning: unused variable 'sendBytes' [-Wunused-variable]
     unsigned char sendBytes[12]= "Complete";
                   ^
In file included from ../src/Common/main.c:54:0:
../src/Common/main.c: At top level:
../src/Common/lan.h:48:21: warning: 'server_netif' defined but not used [-Wunused-variable]
 static struct netif server_netif;
                     ^
'Finished building: ../src/Common/main.c'
' '
'Building file: ../src/Common/recive_lan_callback.c'
'Invoking: ARM gcc compiler'
arm-xilinx-eabi-gcc -Wall -O0 -g3 -I"E:\ZedBoard_Projects\FmComms_Lan\fmcomms1_zed.sdk\fmcomms_lan\src\AD8366" -I"E:\ZedBoard_Projects\FmComms_Lan\fmcomms1_zed.sdk\fmcomms_lan\src\AD9122" -I"E:\ZedBoard_Projects\FmComms_Lan\fmcomms1_zed.sdk\fmcomms_lan\src\AD9523" -I"E:\ZedBoard_Projects\FmComms_Lan\fmcomms1_zed.sdk\fmcomms_lan\src\AD9548" -I"E:\ZedBoard_Projects\FmComms_Lan\fmcomms1_zed.sdk\fmcomms_lan\src\AD9643" -I"E:\ZedBoard_Projects\FmComms_Lan\fmcomms1_zed.sdk\fmcomms_lan\src\ADF4351" -I"E:\ZedBoard_Projects\FmComms_Lan\fmcomms1_zed.sdk\fmcomms_lan\src\Common" -c -fmessage-length=0 -MT"src/Common/recive_lan_callback.o" -I../../fmcomms_lan_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/Common/recive_lan_callback.d" -MT"src/Common/recive_lan_callback.d" -o "src/Common/recive_lan_callback.o" "../src/Common/recive_lan_callback.c"
'Finished building: ../src/Common/recive_lan_callback.c'
' '
'Building file: ../src/Common/shared_variables.c'
'Invoking: ARM gcc compiler'
arm-xilinx-eabi-gcc -Wall -O0 -g3 -I"E:\ZedBoard_Projects\FmComms_Lan\fmcomms1_zed.sdk\fmcomms_lan\src\AD8366" -I"E:\ZedBoard_Projects\FmComms_Lan\fmcomms1_zed.sdk\fmcomms_lan\src\AD9122" -I"E:\ZedBoard_Projects\FmComms_Lan\fmcomms1_zed.sdk\fmcomms_lan\src\AD9523" -I"E:\ZedBoard_Projects\FmComms_Lan\fmcomms1_zed.sdk\fmcomms_lan\src\AD9548" -I"E:\ZedBoard_Projects\FmComms_Lan\fmcomms1_zed.sdk\fmcomms_lan\src\AD9643" -I"E:\ZedBoard_Projects\FmComms_Lan\fmcomms1_zed.sdk\fmcomms_lan\src\ADF4351" -I"E:\ZedBoard_Projects\FmComms_Lan\fmcomms1_zed.sdk\fmcomms_lan\src\Common" -c -fmessage-length=0 -MT"src/Common/shared_variables.o" -I../../fmcomms_lan_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/Common/shared_variables.d" -MT"src/Common/shared_variables.d" -o "src/Common/shared_variables.o" "../src/Common/shared_variables.c"
../src/Common/shared_variables.c:12:26: warning: 'lan_input' initialized and declared 'extern'
 extern volatile uint16_t lan_input = 0;
                          ^
../src/Common/shared_variables.c:13:21: warning: 'lan_input_flag' initialized and declared 'extern'
 extern volatile int lan_input_flag = 0;
                     ^
../src/Common/shared_variables.c:14:31: warning: 'iq' initialized and declared 'extern'
 extern volatile unsigned char iq = 0;
                               ^
../src/Common/shared_variables.c:15:34: warning: 'rtcp' initialized and declared 'extern'
 extern volatile  struct tcp_pcb *rtcp = 0;
                                  ^
../src/Common/shared_variables.c:16:30: warning: 'storageDataI' initialized and declared 'extern'
 extern volatile unsigned int storageDataI[128] = {0};
                              ^
../src/Common/shared_variables.c:17:30: warning: 'storageDataQ' initialized and declared 'extern'
 extern volatile unsigned int storageDataQ[128] = {0};
                              ^
../src/Common/shared_variables.c:18:31: warning: 'flag' initialized and declared 'extern'
 extern volatile unsigned char flag = 0;
                               ^
../src/Common/shared_variables.c:19:31: warning: 'iq' initialized and declared 'extern'
 extern volatile unsigned char iq = 0;
                               ^
../src/Common/shared_variables.c:19:31: error: redefinition of 'iq'
../src/Common/shared_variables.c:14:31: note: previous definition of 'iq' was here
 extern volatile unsigned char iq = 0;
                               ^
make: *** [src/Common/shared_variables.o] Error 1

09:42:43 Build Finished (took 914ms)

